Fixed vulnerbilities in code.